--- a/media/nbt.css
+++ b/media/nbt.css
@@ -7,7 +7,38 @@ html, body {
 	height: 100%;
 }
 
-.nbt-editor textarea {
+.nbt-content {
 	width: 100%;
 	height: 100%;
 }
+
+.nbt-compound,
+.nbt-list {
+	margin-left: 20px;
+}
+
+.nbt-key {
+	font-family: monospace;
+}
+
+.nbt-entries {
+	font-style: italic;
+}
+
+.nbt-icon {
+	display: inline-block;
+	background-image: url('./icons.png');
+	width: 16px;
+	height: 16px;
+	margin-right: 4px;
+}
+
+.nbt-icon.byte-icon { background-position: 0 0; }
+.nbt-icon.double-icon { background-position: -16px 0; }
+.nbt-icon.float-icon { background-position: -32px 0; }
+.nbt-icon.int-icon { background-position: -48px 0; }
+.nbt-icon.long-icon { background-position: 0 -16px; }
+.nbt-icon.short-icon { background-position: -16px -16px; }
+.nbt-icon.string-icon { background-position: -32px -16px; }
+.nbt-icon.compound-icon { background-position: -48px -16px; }
+.nbt-icon.list-icon { background-position: -32px -32px; }
