--- a/media/nbt.css
+++ b/media/nbt.css
@@ -16,13 +16,49 @@ html, body {
 	height: 100%;
 }
 
-.nbt-compound,
-.nbt-list {
-	margin-left: 20px;
+.nbt-tag {
+	height: 22px;
+}
+
+.nbt-tag:not(.collapse) {
+	position: relative;
+	padding-left: 8px;
+	margin-left: 7px;
+	border-left: 1px #777 solid;
+}
+
+div:last-child > .nbt-tag {
+	border-color: transparent;
+}
+
+.nbt-tag:not(.collapse)::before {
+	content: '';
+	position: absolute;
+	width: 9px;
+	height: 8px;
+	top: 0;
+	left: -1px;
+	border-bottom: 1px #777 solid;
+}
+
+div:last-child > .nbt-tag:not(.collapse)::before {
+	border-left: 1px #777 solid;
+	width: 10px;
+}
+
+.nbt-body {
+	padding-left: 12px;
+	margin-left: 7px;
+	border-left: 1px #777 solid;
+}
+
+div:last-child > .nbt-body {
+	border-color: transparent;
 }
 
 .nbt-key {
 	font-family: monospace;
+	height: 22px;
 }
 
 .nbt-entries {
@@ -41,13 +77,7 @@ html, body {
 	font-size: 12px;
 	cursor: pointer;
 	user-select: none;
-}
-
-.nbt-line {
-	display: inline-block;
-	width: 16px;
-	height: 16px;
-	margin: 0 0
+	font-weight: bold;
 }
 
 .nbt-icon {
@@ -55,7 +85,7 @@ html, body {
 	background-image: url('./icons.png');
 	width: 16px;
 	height: 16px;
-	margin-right: 4px;
+	margin-bottom: -3px;
 }
 
 .nbt-icon.byte-icon { background-position: 0 0; }
@@ -66,4 +96,4 @@ html, body {
 .nbt-icon.short-icon { background-position: -16px -16px; }
 .nbt-icon.string-icon { background-position: -32px -16px; }
 .nbt-icon.compound-icon { background-position: -48px -16px; }
-.nbt-icon.list-icon { background-position: -32px -32px; }
+.nbt-icon.list-icon { background-position: 0 -32px; }
