--- a/media/nbt.css
+++ b/media/nbt.css
@@ -97,3 +97,6 @@ div:last-child > .nbt-body {
 .nbt-icon.string-icon { background-position: -32px -16px; }
 .nbt-icon.compound-icon { background-position: -48px -16px; }
 .nbt-icon.list-icon { background-position: 0 -32px; }
+.nbt-icon.byteArray-icon { background-position: -16px -32px; }
+.nbt-icon.intArray-icon { background-position: -32px -32px; }
+.nbt-icon.longArray-icon { background-position: -48px -32px; }
