--- a/editor/res/editor.css
+++ b/editor/res/editor.css
@@ -7,13 +7,13 @@ html, body {
 }
 
 .nbt-editor {
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
 }
 
 .nbt-content {
-	width: 100%;
-	height: 100%;
 	padding-top: 30px;
 }
 
@@ -120,7 +120,6 @@ canvas {
   height: calc(100vh);
   background-color: #1e1e1e;
   border: none;
-  image-rendering: pixelated;
 }
 
 .block-atlas {
@@ -185,4 +184,21 @@ canvas {
 @keyframes fadein {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+
+.snbt-editor {
+	background-color: #1e1e1e;
+	color: #d4d4d4;
+	font-family: 'Monaco', 'Menlo', 'Consolas', 'Droid Sans Mono', 'Inconsolata', 'Courier New', 'monospace';
+	width: 100%;
+	border: none;
+	outline: none !important;
+	resize: none;
+	white-space: pre;
+  overflow-wrap: normal;
+  overflow-x: scroll;
+}
+
+.snbt-editor::selection {
+	background-color: #285b8dbe;
 }
