Show 3D view for chunks in region file

--- a/res/editor.css
+++ b/res/editor.css
@@ -297,6 +297,10 @@ span.nbt-value {
 	padding-top: 65px;
 }
 
+.region-menu ~ .nbt-editor > .side-panel {
+	top: 72px
+}
+
 .region-menu input {
 	margin-left: 3px;
 	width: 50px;
