--- a/res/editor.css
+++ b/res/editor.css
@@ -205,22 +205,22 @@ span.nbt-value {
 	min-width: 16px;
 }
 
-[data-icon=byte] { background-position: 0 0; }
-[data-icon=double] { background-position: -16px 0; }
-[data-icon=float] { background-position: -32px 0; }
-[data-icon=int] { background-position: -48px 0; }
-[data-icon=long] { background-position: 0 -16px; }
-[data-icon=short] { background-position: -16px -16px; }
-[data-icon=string] { background-position: -32px -16px; }
-[data-icon=compound] { background-position: -48px -16px; }
-[data-icon=list] { background-position: -32px -32px; }
-[data-icon=byteArray] { background-position: 0 -32px; }
-[data-icon=intArray] { background-position: -16px -32px; }
-[data-icon=longArray] { background-position: 0 -48px; }
-[data-icon=chunk] { background-position: -16px -48px; }
-[data-icon=number] { background-position: -32px -48px; }
-[data-icon=null] { background-position: -48px -48px; }
-[data-icon=any] {
+[data-icon=Byte] { background-position: 0 0; }
+[data-icon=Double] { background-position: -16px 0; }
+[data-icon=Float] { background-position: -32px 0; }
+[data-icon=Int] { background-position: -48px 0; }
+[data-icon=Long] { background-position: 0 -16px; }
+[data-icon=Short] { background-position: -16px -16px; }
+[data-icon=String] { background-position: -32px -16px; }
+[data-icon=Compound] { background-position: -48px -16px; }
+[data-icon=List] { background-position: -32px -32px; }
+[data-icon=ByteArray] { background-position: 0 -32px; }
+[data-icon=IntArray] { background-position: -16px -32px; }
+[data-icon=LongArray] { background-position: 0 -48px; }
+[data-icon=Chunk] { background-position: -16px -48px; }
+[data-icon=Number] { background-position: -32px -48px; }
+[data-icon=Null] { background-position: -48px -48px; }
+[data-icon=Any] {
 	background: var(--vscode-input-background);
 }
 
@@ -613,7 +613,7 @@ span.nbt-value {
 	aspect-ratio: 1/1;
 	background-color: var(--vscode-sideBar-background);
 	color: var(--vscode-sideBar-foreground);
-	border: 2px solid var(--vscode-sideBarSectionHeader-border);
+	border: 1px solid var(--vscode-sideBarSectionHeader-border);
 	padding: 1px;
 	display: flex;
 	justify-content: center;
@@ -624,22 +624,35 @@ span.nbt-value {
 	cursor: pointer;
 }
 
-.region-map-chunk:not(:nth-child(-n+32)) {
-	border-top: none;
+.region-map-chunk:nth-child(-n+32) {
+	border-top-width: 2px;
 }
 
-.region-map-chunk:not(:nth-child(32n+1)) {
-	border-left: none;
+.region-map-chunk:nth-child(n+993) {
+	border-bottom-width: 2px;
+}
+
+.region-map-chunk:nth-child(32n+1) {
+	border-left-width: 2px;
+}
+
+.region-map-chunk:nth-child(32n) {
+	border-right-width: 2px;
 }
 
 .region-map-chunk.empty {
 	background-color: transparent;
 	color: transparent;
 	cursor: initial;
+	user-select: none;
 }
 
 .region-map-chunk.loaded {
 	background-color: var(--vscode-menu-selectionBackground);
+}
+
+.region-map-chunk.invalid {
+	background-color: var(--vscode-inputValidation-errorBackground);
 }
 
 .hidden {
